# hashpool

./: .devenv.flake.nix  .gitignore  README.md  bitcoin.conf  bitcoind.nix  cpuminer.nix  devenv.local.nix.default  devenv.nix  devenv.yaml  flake.nix  justfile
config/: jdc.config.toml  jds.config.toml  mint.config.toml  pool.config.toml  stats-pool.config.toml  stats-proxy.config.toml  tproxy.config.toml  web-pool.config.toml  web-proxy.config.toml
config/prod/: bitcoin.conf  jdc.config.toml  jds.config.toml  mint.config.toml  pool.config.toml  stats-pool.config.toml  stats-proxy.config.toml  tproxy.config.toml  web-pool.config.toml  web-proxy.config.toml
config/prod/shared/: miner.toml  pool.toml
config/shared/: miner.toml  pool.toml
crates/hashpool-redis/: Cargo.toml
crates/hashpool-redis/src/: client.rs  error.rs  lib.rs
docs/: AGENTS.md  CODE_CLEANUP_PRIORITIES.md  EHASH_PROTOCOL.md  HASHPOOL_MINT_PROTOCOL_BUG.md  MINIMUM_DIFFICULTY_ARCHITECTURE.md  MINIMUM_DIFFICULTY_FIX.md  MINT_INTEGRATION_PLAN.md  PAYMENT_FORWARDING.md  PAYMENT_REQUEST.md  PLUGIN_ARCHITECTURE_PROPOSAL.md  PROMPT_LOOP.md  SHIT_TO_FIX.md  SRI_BUGS.md  STATS_DASHBOARD_IMPLEMENTATION_GUIDE.md  TIME_SERIES_METRICS_ARCHITECTURE.md  TIME_SERIES_METRICS_PLAN.md  TRANSLATOR_REJECTED_SHARE_ERROR_FORWARDING.md  TUI_UNFUCK_GUIDE.md  WARM-START-TIME-SERIES-INITIALIZATION.md  last-block-stats-plan.md  pool-block-tracking.md
docs/SRI-1.5.0-migration/: PHASE_1.md  PHASE_2.md
protocols/: Cargo.toml
protocols/ehash/: Cargo.toml
protocols/ehash/src/: keyset.rs  lib.rs  locking_key.rs  message_type.rs  quote.rs  share.rs  sv2.rs  work.rs
protocols/v2/subprotocols/mint-quote/: Cargo.toml  README.md
protocols/v2/subprotocols/mint-quote/src/: lib.rs  mint_quote_error.rs  mint_quote_request.rs  mint_quote_response.rs
roles/: Cargo.toml
roles/jd-client/src/lib/: downstream.rs  mod.rs
roles/jd-client/src/lib/channel_manager/: downstream_message_handler.rs
roles/jd-client/src/lib/job_declarator/: setup_connection.rs
roles/jd-client/src/lib/template_receiver/: setup_connection.rs
roles/jd-client/src/lib/upstream_sv2/: upstream.rs
roles/jd-server/src/: args.rs  main.rs
roles/jd-server/src/lib/job_declarator/: mod.rs
roles/mint/: Cargo.toml  IMPLEMENTATION_STATUS.md
roles/mint/config/: mint.config.toml
roles/mint/src/: main.rs
roles/mint/src/lib/: error.rs  message_types.rs  mod.rs
roles/mint/src/lib/mint_manager/: mod.rs  setup.rs
roles/mint/src/lib/sv2_connection/: connection.rs  frame_codec.rs  message_handler.rs  mod.rs  quote_processing.rs  setup_connection.rs  state_machine.rs
roles/mint/tests/: sv2_connection_integration.rs
roles/pool/: Cargo.toml
roles/pool/src/: args.rs
roles/pool/src/lib/: config.rs  mod.rs  share_validation.rs  stats_integration.rs
roles/pool/src/lib/mining_pool/: message_handler.rs  mint_connection.rs  mint_integration.rs  mod.rs  quote_dispatch_hook.rs  quote_poller.rs  setup_connection.rs
roles/pool/src/lib/template_receiver/: setup_connection.rs
roles/roles-utils/config/: Cargo.toml
roles/roles-utils/config/src/: lib.rs
roles/roles-utils/mint-pool-messaging/: Cargo.toml
roles/roles-utils/mint-pool-messaging/src/: channel_manager.rs  lib.rs  message_codec.rs  message_hub.rs  sv2_frames.rs
roles/roles-utils/pool-messages/: Cargo.toml
roles/roles-utils/pool-messages/src/: lib.rs
roles/roles-utils/pool-stats/: Cargo.toml
roles/roles-utils/pool-stats/src/: lib.rs
roles/roles-utils/quote-dispatcher/: Cargo.toml
roles/roles-utils/quote-dispatcher/src/: lib.rs
roles/roles-utils/share-hooks/: Cargo.toml
roles/roles-utils/share-hooks/src/: lib.rs
roles/roles-utils/stats/: Cargo.toml
roles/roles-utils/stats-sv2/: Cargo.toml
roles/roles-utils/stats-sv2/src/: bucketing.rs  lib.rs  metrics.rs  storage.rs  types.rs  windowing.rs
roles/roles-utils/stats/src/: lib.rs  stats_adapter.rs  stats_client.rs  stats_poller.rs
roles/roles-utils/web-assets/: Cargo.toml
roles/roles-utils/web-assets/src/: formatting.rs  icons.rs  lib.rs
roles/roles-utils/web-utils/: Cargo.toml
roles/roles-utils/web-utils/src/: lib.rs
roles/stats-pool/: Cargo.toml
roles/stats-pool/src/: api.rs  config.rs  db.rs  main.rs  stats_handler.rs
roles/stats-proxy/: Cargo.toml
roles/stats-proxy/src/: api.rs  config.rs  db.rs  lib.rs  main.rs  stats_handler.rs
roles/test-utils/mining-device/: Cargo.toml
roles/test-utils/mining-device-sv1/src/: client.rs
roles/tests-integration/: Cargo.toml
roles/tests-integration/tests/common/: mod.rs  sniffer.rs
roles/translator/: Cargo.toml  README.md
roles/translator/config-examples/: tproxy-config-hosted-pool-example.toml  tproxy-config-local-jdc-example.toml  tproxy-config-local-pool-example.toml
roles/translator/src/: args.rs
roles/translator/src/lib/: config.rs  error.rs  faucet_api.rs  miner_stats.rs  mod.rs  stats_integration.rs  status.rs
roles/translator/src/lib/downstream_sv1/: downstream.rs  mod.rs
roles/translator/src/lib/proxy/: bridge.rs
roles/translator/src/lib/sv1/downstream/: data.rs  downstream.rs  message_handler.rs
roles/translator/src/lib/sv1/sv1_server/: difficulty_manager.rs  sv1_server.rs
roles/translator/src/lib/sv2/channel_manager/: channel_manager.rs
roles/translator/src/lib/sv2/upstream/: upstream.rs
roles/translator/src/lib/upstream_sv2/: upstream.rs
roles/web-pool/: Cargo.toml
roles/web-pool/src/: config.rs  lib.rs  main.rs  web.rs
roles/web-pool/templates/: dashboard.html
roles/web-proxy/: Cargo.toml
roles/web-proxy/src/: config.rs  lib.rs  main.rs  web.rs
roles/web-proxy/templates/: miners.html  pool.html  wallet.html
scripts/: deploy.sh  hashpool-ctl.sh  patch-cdk-path.sh  regtest-setup.sh
scripts/nginx/: README.md
scripts/systemd/: hashpool-bitcoind.service  hashpool-jd-client.service  hashpool-jd-server.service  hashpool-mint.service  hashpool-pool.service  hashpool-proxy.service  hashpool-stats-pool.service  hashpool-stats-proxy.service  hashpool-web-pool.service  hashpool-web-proxy.service
test/integration-tests/: Cargo.toml
(+31 files in other folders)
