[workspace]
resolver="2"

members = [
    "pool",
    "web-pool",
    "web-proxy",
    "test-utils/mining-device",
    "test-utils/mining-device-sv1",
    "translator",
    "jd-client",
    "jd-server",
    "roles-utils/network-helpers",
    "roles-utils/stratum-translation",
    "roles-utils/stats",
    "roles-utils/config",
    "roles-utils/config-helpers",
    "roles-utils/rpc",
]

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1
