[workspace]
resolver="2"

members = [
    "pool",
    "stats-pool",
    "stats-proxy",
    "web-proxy",
    "web-pool",
    "test-utils/mining-device",
    "test-utils/mining-device-sv1",
    "translator",
    "jd-client",
    "jd-server",
    "roles-utils/mint-pool-messaging",
    "roles-utils/share-hooks",
    # "roles-utils/pool-messages",  # TODO: Phase 2 - will be activated when mint role is enabled
    "roles-utils/web-assets",
    "roles-utils/stats",
    "roles-utils/network-helpers",
    "roles-utils/stratum-translation",
    "roles-utils/config",
    "roles-utils/config-helpers",
    "roles-utils/rpc",
    "mint",
    # "roles-utils/quote-dispatcher",  # TODO: Phase 3 - requires mint phase to be completed
    # "tests-integration",  # TODO: Deferred - requires jd-client and mining-proxy ports
]

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1
