[package]
name = "hashpool-redis"
version = "0.1.0"
edition = "2021"
description = "Redis functionality for Hashpool"

[dependencies]
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1" 