[package]
name = "ehash"
version = "0.1.0"
edition = "2021"
description = "Hashpool ehash utility functions"
license = "MIT OR Apache-2.0"

[dependencies]
binary_sv2 = { version = "^4.0.0", path = "../v2/binary-sv2" }
const_sv2 = { version = "^3.0.0", path = "../v2/const-sv2" }
mint_quote_sv2 = { version = "^1.0.0", path = "../v2/subprotocols/mint-quote" }
thiserror = "1"
cdk = { git = "https://github.com/vnprc/cdk", rev = "62114cf6" }
cdk-common = { git = "https://github.com/vnprc/cdk", rev = "62114cf6" }
derive_codec_sv2 = { version = "^1.0.0", path = "../v2/binary-sv2/derive_codec" }

[dev-dependencies]
rand = "0.8"
secp256k1 = "0.31"
