[package]
name = "ehash"
version = "0.1.0"
edition = "2021"
description = "Hashpool ehash utility functions"
license = "MIT OR Apache-2.0"
# NOTE: Tests disabled pending full ehash API implementation
# The test code has integration issues with binary-sv2 codec APIs that need to be resolved

[dependencies]
binary_sv2 = { version = "^4.0.0", path = "../v2/binary-sv2" }
const_sv2 = { version = "^3.0.0", path = "../v2/const-sv2" }
mint_quote_sv2 = { version = "^1.0.0", path = "../v2/subprotocols/mint-quote" }
thiserror = "1"
cdk = { git = "https://github.com/vnprc/cdk", rev = "77df2ae4" }
cdk-common = { git = "https://github.com/vnprc/cdk", rev = "77df2ae4" }
derive_codec_sv2 = { version = "^1.0.0", path = "../v2/binary-sv2/derive_codec" }
# Force std feature on toml to fix trait bound issues when used with CDK
toml = { git = "https://github.com/diondokter/toml-rs", rev = "c4161aa", features = ["std"] }

[dev-dependencies]
rand = "0.8"
secp256k1 = "0.31"
