[package]
name = "mint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6"
home = "0.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bip39 = "2.0"
redis = { version = "0.23", features = ["tokio-comp"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoin = { version= "0.32.2" }

cdk = { git = "https://github.com/vnprc/cdk.git", package = "cdk", rev = "f057cc87" }
cdk-axum = { git = "https://github.com/vnprc/cdk.git", package = "cdk-axum", rev = "f057cc87" }
cdk-mintd = { git = "https://github.com/vnprc/cdk.git", package = "cdk-mintd", rev = "f057cc87" }
cdk-sqlite = { git = "https://github.com/vnprc/cdk.git", package = "cdk-sqlite", rev = "f057cc87" }
cdk-redb = { git = "https://github.com/vnprc/cdk.git", package = "cdk-redb", rev = "f057cc87" }