[package]
name = "pool_sv2"
version = "0.1.3"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "SV2 pool role"
documentation = "https://docs.rs/pool_sv2"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]


[lib]
name = "pool_sv2"
path = "src/lib/mod.rs"

[dependencies]
async-channel = "1.5.1"
async-trait = "0.1"
stratum-common = { path = "../../common", features = ["with_network_helpers"] }
buffer_sv2 = { path = "../../utils/buffer" }
rand = "0.8.4"
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
secp256k1 = { version = "0.28.2", default-features = false, features = ["alloc", "rand", "rand-std"] }
tokio = { version = "1.44.1", features = ["full"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
tracing = { version = "0.1" }
async-recursion = "1.0.0"
error_handling = { path = "../../utils/error-handling" }
nohash-hasher = "0.2.0"
key-utils = { path = "../../utils/key-utils" }
config_helpers_sv2 = { path = "../roles-utils/config-helpers" }
clap = { version = "4.5.39", features = ["derive"] }
mint_pool_messaging = { path = "../roles-utils/mint-pool-messaging" }
share-hooks = { path = "../roles-utils/share-hooks" }
quote-dispatcher = { path = "../roles-utils/quote-dispatcher" }
pool-stats = { path = "../roles-utils/pool-stats" }
stats = { path = "../roles-utils/stats" }
stats-sv2 = { path = "../roles-utils/stats-sv2" }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
binary_sv2 = { path = "../../protocols/v2/binary-sv2" }
hex = "0.4.3"
ehash = { path = "../../protocols/ehash" }
shared_config = { path = "../roles-utils/config" }
mint_quote_sv2 = { path = "../../protocols/v2/subprotocols/mint-quote" }
const_sv2 = { path = "../../protocols/v2/const-sv2" }
serde_json = "1"

[dev-dependencies]
integration_tests_sv2 = { path = "../../test/integration-tests" }
