[package]
name = "web_proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "web_proxy"
path = "src/lib.rs"

[[bin]]
name = "web_proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axum = "0.8"
tokio-util = { version = "0.7", features = ["io-util"] }
reqwest = { version = "0.12", features = ["json"] }

# Web assets
web_assets = { path = "../roles-utils/web-assets" }
web_utils = { path = "../roles-utils/web-utils" }

# Stats adapter (for ProxySnapshot type)
stats = { path = "../roles-utils/stats" }
