[package]
name = "stats-sv2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1", features = ["full"] }
